--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,28 +48,29 @@ else ( )
   find_package ( Yaml_cpp 0.5.0)
   set ( YAMLCPP_LIBRARY_DEBUG ${YAMLCPP_LIBRARY} )
 
-  if ( NOT SDL_FOUND )
+  MESSAGE("SDL2_FOUND: ${SDL2_FOUND}")
+  if ( NOT SDL2_FOUND )
     message ( FATAL_ERROR "Can't find SDL which is required" )
   else ()
-    include_directories ( ${SDL_INCLUDE_DIR} )
+    include_directories ( ${SDL2_INCLUDE_DIR} )
     message ( "found SDL ${SDL_MAJOR}.${SDL_MINOR}.${SDL_MICRO} (${SDL_LIBRARY_DIRS}:${SDL_INCLUDE_DIR})" )
   endif ()
 
-  if ( NOT SDLMIXER_FOUND )
+  if ( NOT SDL2_mixer_FOUND )
     message ( FATAL_ERROR "Can't find SDL_mixer which is required" )
   else ()
     include_directories ( ${SDLMIXER_INCLUDE_DIR} )
     message ( "found SDL_mixer ${SDL_MIXER_MAJOR}.${SDL_MIXER_MINOR}.${SDL_MIXER_MICRO} (${SDL_MIXER_LIBRARY_DIRS}:${SDLMIXER_INCLUDE_DIR})" )
   endif ()
 
-  if ( NOT SDLGFX_FOUND )
+  if ( NOT SDL2_gfx_FOUND )
     message ( FATAL_ERROR "Can't find SDL_gfx which is required" )
   else ()
     include_directories ( ${SDLGFX_INCLUDE_DIR} )
     message ( "found SDL_gfx ${SDL_GFX_MAJOR}.${SDL_GFX_MINOR}.${SDL_GFX_MICRO} (${SDL_GFX_LIBRARY_DIRS}:${SDLGFX_INCLUDE_DIR})" )
   endif ()
 
-  if ( NOT SDLIMAGE_FOUND )
+  if ( NOT SDL2_image_FOUND )
     message ( FATAL_ERROR "Can't find SDL_image which is required" )
   else ()
     include_directories ( ${SDLIMAGE_INCLUDE_DIR} )
