Massive ugly hack towards SDL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,28 +53,28 @@ else ( )
     message ( FATAL_ERROR "Can't find SDL which is required" )
   else ()
     include_directories ( ${SDL2_INCLUDE_DIR} )
-    message ( "found SDL ${SDL_MAJOR}.${SDL_MINOR}.${SDL_MICRO} (${SDL_LIBRARY_DIRS}:${SDL_INCLUDE_DIR})" )
+#     message ( "found SDL ${SDL_MAJOR}.${SDL_MINOR}.${SDL_MICRO} (${SDL_LIBRARY_DIRS}:${SDL_INCLUDE_DIR})" )
   endif ()
 
   if ( NOT SDL2_mixer_FOUND )
     message ( FATAL_ERROR "Can't find SDL_mixer which is required" )
-  else ()
-    include_directories ( ${SDLMIXER_INCLUDE_DIR} )
-    message ( "found SDL_mixer ${SDL_MIXER_MAJOR}.${SDL_MIXER_MINOR}.${SDL_MIXER_MICRO} (${SDL_MIXER_LIBRARY_DIRS}:${SDLMIXER_INCLUDE_DIR})" )
+#   else ()
+#     include_directories ( ${SDLMIXER_INCLUDE_DIR} )
+#     message ( "found SDL_mixer ${SDL_MIXER_MAJOR}.${SDL_MIXER_MINOR}.${SDL_MIXER_MICRO} (${SDL_MIXER_LIBRARY_DIRS}:${SDLMIXER_INCLUDE_DIR})" )
   endif ()
 
   if ( NOT SDL2_gfx_FOUND )
     message ( FATAL_ERROR "Can't find SDL_gfx which is required" )
-  else ()
-    include_directories ( ${SDLGFX_INCLUDE_DIR} )
-    message ( "found SDL_gfx ${SDL_GFX_MAJOR}.${SDL_GFX_MINOR}.${SDL_GFX_MICRO} (${SDL_GFX_LIBRARY_DIRS}:${SDLGFX_INCLUDE_DIR})" )
+#   else ()
+#     include_directories ( ${SDLGFX_INCLUDE_DIR} )
+#     message ( "found SDL_gfx ${SDL_GFX_MAJOR}.${SDL_GFX_MINOR}.${SDL_GFX_MICRO} (${SDL_GFX_LIBRARY_DIRS}:${SDLGFX_INCLUDE_DIR})" )
   endif ()
 
   if ( NOT SDL2_image_FOUND )
     message ( FATAL_ERROR "Can't find SDL_image which is required" )
-  else ()
-    include_directories ( ${SDLIMAGE_INCLUDE_DIR} )
-    message ( "found SDL_image ${SDL_IMAGE_MAJOR}.${SDL_IMAGE_MINOR}.${SDL_IMAGE_MICRO} (${SDL_IMAGE_LIBRARY_DIRS}:${SDLIMAGE_INCLUDE_DIR})" )
+#   else ()
+#     include_directories ( ${SDLIMAGE_INCLUDE_DIR} )
+#     message ( "found SDL_image ${SDL_IMAGE_MAJOR}.${SDL_IMAGE_MINOR}.${SDL_IMAGE_MICRO} (${SDL_IMAGE_LIBRARY_DIRS}:${SDLIMAGE_INCLUDE_DIR})" )
   endif ()
 
   if ( NOT YAMLCPP_FOUND )
